# slurmio

./: .coveralls.yml  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: test_and_deploy.yml
slurmio/: __init__.py  slurmio.py
tests/data/: sacct.txt
tests/tests/: test_slurmio.py
tests/travis/: testing.sh
